//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  seq BigInt [increment, unique, not null]
  email String [unique, not null]
  name String
  phone_number String
  learning_data Json [not null, default: '{}']
  language String
  notifications_enabled Boolean [default: true]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  auth_provider_conns user_auth_provider_conns [not null]
  worker_registration_tokens worker_registration_tokens [not null]
  workers workers [not null]
  datasets datasets [not null]
  processors processors [not null]
  processes processes [not null]
}

Table user_auth_provider_conns {
  id String [pk]
  seq BigInt [increment, unique, not null]
  auth_provider String [not null]
  user_id String [not null]
  user users [not null]
  code String [not null]
  payload Json [not null]
  disconnected_at DateTime
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table files {
  id String [pk]
  seq BigInt [increment, unique, not null]
  storage_provider String [not null]
  provider_path String [not null]
  provider_status String [not null]
  provider_verified_at DateTime
  type String [not null]
  upload_url String
  upload_url_expires_at DateTime
  allow_public_access Boolean [not null]
  public_url String
  public_url_expires_at DateTime
  filename String [not null]
  mime_type String [not null]
  size Int [not null]
  md5_hash String [not null]
  payload Json [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  dataset datasets
  processing_results processes [not null]
  processing_metrics processes [not null]
}

Table datasets {
  id String [pk]
  seq BigInt [increment, unique, not null]
  user_id String [not null]
  user users [not null]
  file_id String [unique, not null]
  file files [not null]
  description String
  tags String
  visibility String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  processes processes [not null]
}

Table processors {
  id String [pk]
  seq BigInt [increment, unique, not null]
  user_id String [not null]
  user users [not null]
  name String [not null]
  version String [not null]
  image_tag String [not null]
  description String
  tags String
  allowed_mime_types String [not null]
  visibility String [not null]
  configuration Json [not null]
  payload Json [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  processes processes [not null]
}

Table worker_registration_tokens {
  id String [pk]
  seq BigInt [increment, unique, not null]
  user_id String [not null]
  user users [not null]
  token String [unique, not null]
  is_unlimited_usage Boolean [not null]
  activated_at DateTime
  expires_at DateTime
  archived_at DateTime
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  workers workers [not null]
}

Table workers {
  id String [pk]
  seq BigInt [increment, unique, not null]
  user_id String [not null]
  user users [not null]
  registration_token_id String [not null]
  registration_token worker_registration_tokens [not null]
  refresh_token String [not null]
  refresh_token_expires_at DateTime [not null]
  name String
  internal_id String [not null]
  signature String [not null]
  missing Boolean [not null, default: false]
  version String
  system_info Json [not null]
  agent_info Json [not null]
  payload Json [not null]
  description String
  tags String
  last_seen_at DateTime
  archived_at DateTime
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  processes processes [not null]
}

Table processes {
  id String [pk]
  seq BigInt [increment, unique, not null]
  user_id String [not null]
  user users [not null]
  processor_id String [not null]
  processor processors [not null]
  dataset_id String [not null]
  dataset datasets [not null]
  worker_id String
  worker workers
  result_file_id String
  result_file files
  metrics_file_id String
  metrics_file files
  status String [not null]
  visibility String [not null]
  started_at DateTime
  finished_at DateTime
  verified_at DateTime
  attempts Int
  message String
  reported_at DateTime
  keep_until DateTime
  archived_at DateTime
  configuration Json [not null]
  payload Json [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Ref: user_auth_provider_conns.user_id > users.id [delete: Cascade]

Ref: datasets.user_id > users.id [delete: Cascade]

Ref: datasets.file_id - files.id [delete: Cascade]

Ref: processors.user_id > users.id [delete: Cascade]

Ref: worker_registration_tokens.user_id > users.id [delete: Cascade]

Ref: workers.user_id > users.id [delete: Restrict]

Ref: workers.registration_token_id > worker_registration_tokens.id [delete: Restrict]

Ref: processes.user_id > users.id [delete: Cascade]

Ref: processes.processor_id > processors.id [delete: Cascade]

Ref: processes.dataset_id > datasets.id [delete: Cascade]

Ref: processes.worker_id > workers.id [delete: Set Null]

Ref: processes.result_file_id > files.id [delete: Set Null]

Ref: processes.metrics_file_id > files.id [delete: Set Null]